# NXTpi

./: CMakeLists.txt  Exomy  README.md  package.xml
ExoMy_Software/: CMakeLists.txt  README.md  package.xml
ExoMy_Software/action/: PilotExomy.action
ExoMy_Software/config/: exomy.yaml  keyboard.txt  point_turn_calib.txt  point_turn_calib10.txt  point_turn_calib11.txt  point_turn_calib2.txt  task_list.txt
ExoMy_Software/gui/: index.html
ExoMy_Software/launch/: exomy.launch  exomy.severalsubscriberexample
ExoMy_Software/scripts/: config_steer_motor_maxsteering.py  test_input.py
ExoMy_Software/src/: auto_pilot.py  autojoy_server.py  listen4nxt.py  man_pilot.py  motor_node.py  parse_content.py  pilot_exomy.py  pilot_exomy2.py  robot_node.py
Lejos NXT_pi_ROS/: CommandConstants.java  Lejos_stringSplit.java  NXT_pi_ROS.java  NXTplatform.java  TranslateCMD.java  TranslateREP.java  WriteIntegerLog.java
action/: PilotExomy.action
config/: keyboard.txt
launch/: exomy.launch
mypienv/: BT_piNXT_ros.py  README.md
some documentation/: NXT improved communication timing.xlsx  NXTcompass point_turn_calib.xlsx  NXTcompass point_turn_calib11.xlsx
src/: auto_pilot.py  key_pilot.py  keyboard.txt  motor_node.py  parse_content.py  pilot_exomy.py
srv/: AutoJoy.srv
