<?xml version="1.0"?>
<package format="2">
  <name>exomy</name>
  <version>1.0.1</version>
  <description>The ExoMy ROS Addition of pilot package</description>

  <maintainer email="pebe.espana@posteo.eu">PeterBreger</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/pebe-espana/NXTpi</url>
  <author email="pebe.espana@posteo.eu">PeterBreger</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>python-rpi.gpio</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
